--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    --s: 600px; /* control the size*/
+    --s: 20rem; /* control the size*/
     --c1: #116bb0;
     --c2: #ffffff;
     
@@ -19,16 +19,22 @@ body {
 
 .titulo h1{
    color: #000000;
-   font-size: 5rem;
+   font-size: 4rem;
+  
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+
 }
+
 .foto{
-    width: 20%;
+    width: 20rem;
     margin-left: 5%;
 
     --c3: rgb(227, 228, 217);
-    border: 10px solid var(--c3); 
-    border-bottom:  100px solid var(--c3);
-    border-radius: 10px; /* Bordes redondeados (opcional) */
+    border: 1rem solid var(--c3); 
+    border-bottom:  5rem solid var(--c3);
+    border-radius: 1rem; /* Bordes redondeados (opcional) */
    /* padding: 10px; */
    box-shadow: 5px 5px 20px rgba(0, 0, 0, 1); /* Sombra difuminada */
     
